hard-gists/4074260/run.log
=== Docker Run Log for 4074260 ===
Started at: Mi 29. Okt 14:19:18 CET 2025

[2025-10-29 14:19:18] START: Running container for 4074260
[2025-10-29 14:19:19] SUCCESS: Container 12cbdc4d43cd2c0c74197dca5d895c445963e76d9ea197fedefd4afcc1af8e50 started for 4074260
=== Container logs for 4074260 ===
  File "/snippet.py", line 104
    print "Entity is:", entity
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4074260 ===
[2025-10-29 14:19:21] INFO: Container 12cbdc4d43cd2c0c74197dca5d895c445963e76d9ea197fedefd4afcc1af8e50 has stopped
